--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
         <ul class="copyright">
             <li><a href="{{  data.empresa.languageurl }}">{{  data.empresa.languageVersion }}</a></li>
             <li><i class="fas fa-brands fa-creative-commons"></i>{{ data.footer.title }}<a href="{{ data.footer.link }}" target="_blank" rel="nofollow">{{ data.footer.subtitle }}</a></li>
-            <li>-  <i class="fas fa-solid fa-moon" onclick="toggleTheme()"></i></li>
+            <li> <i class="fas fa-solid fa-moon" onclick="toggleTheme()"></i> </li>
         </ul>
     </div>
 </footer>
