--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
     <noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     {% if site.color %}<meta name="theme-color" content="{{ site.color }}">{% endif%}
+    <script async src="https://kit.fontawesome.com/8dd701ac15.js" crossorigin="anonymous" rel="stylesheet"></script>
 {% seo %}
 {% include analytics.html %} 
 </head>
