--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
-{% assign empresa = data.empresa %}{% assign menu = data.menu %}<header id="header">
+<header id="header">
     <div class="inner">
-        <a href="" class="image avatar"><img src="{{ empresa.imagem }}" alt="Foto do Diego" /></a>
-        <h1><strong>{{ empresa.nome }}</strong>
-            <br /> <p> {{ empresa.slogan }}</p></h1>
-        <br /> <a href="#celebrante"><i class="fa-solid fa-user"></i> {{ menu.item1 }}</a> - <a href="#casamentos"><i class="fa-solid fa-place-of-worship"></i> {{ menu.item2 }} </a> - <a href="#contatos"><i class="fa-solid fa-address-book"></i> {{ menu.item3 }}</a>
+        <a href="" class="image avatar"><img src="{{ data.empresa.imagem }}" alt="Foto do Diego" /></a>
+        <h1><strong>{{ data.empresa.nome }}</strong>
+            <br /> <p> {{ data.empresa.slogan }}</p></h1>
+        <br />
+        {% include nav.html %}
     </div>
-</header>
+</header>   
