--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2895,6 +2895,10 @@ input[type="button"],
 					color: inherit;
 				}
 
+				#header .nav li a:hover {
+					color: #bbff00; // Altere para a cor desejada
+				}
+
 /* Footer */
 
 	#footer .icons {
