--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2932,7 +2932,8 @@ input[type="button"],
 			}
 
 			#footer .copyright li a {
-				color: inherit;
+				color: inherit;				
+				margin-left: 10px;
 			}
 
 /* Main */
