--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,19 +5,19 @@
         <div class="col-8 col-12-small">
             <ul class="labeled-icons">
                 <li>
-                    <a href="{{ empresa.enderecolink }}">
+                    <a href="{{ data.empresa.enderecolink }}">
                         <h3><span class="label"><i class="fa-solid fa-location-dot"></i></span></h3>
                         {{ data.empresa.endereco }}
                     </a>
                 </li>
                 <li>
-                    <a href="{{ empresa.whatsapp }}"> 
+                    <a href="{{ data.empresa.whatsapp }}"> 
                         <h3><span class="label"><i class="fa fa-whatsapp"></i></span></h3>
                         {{ data.empresa.telefone }}
                     </a>
                 </li> 
                 <li>
-                    <a href="{{ empresa.instagram }}">
+                    <a href="{{ data.empresa.instagram }}">
                         <h3><span class="label"><i class="fa fa-instagram alt"></i></span></h3>
                         {{ data.empresa.user}}
                     </a>
