--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,4 +2,5 @@
     <li><a href="#celebrante"><i class="fa-solid fa-user"></i> {{  data.menu.item1 }}</a></li>
     <li><a href="#casamentos"><i class="fa-solid fa-place-of-worship"></i> {{  data.menu.item2 }} </a></li>
     <li><a href="#contatos"><i class="fa-solid fa-address-book"></i> {{ data.menu.item3 }}</a></li>
+    {% if  data.palavras %}<li><a href="./palavras"><i class="fa-solid fa-pencil"></i> {{ data.palavras.item }}</a></li>{% endif %}
 </header>
