--- a/_layouts/defaultPage.html
+++ b/_layouts/defaultPage.html
@@ -13,8 +13,8 @@
 				<br /> <p> {{ data.empresa.slogan }}</p></h1>
 			<br />
 			<ul class="nav">
-				<li><a href="../"><i class="fa-solid fa-house"></i> Home </a></li>
-				<li><a href="/palavras"><i class="fa-solid fa-pencil"></i> Palavras que Inspiram </a></li> 
+				<li><a href="../"><i class="fa-solid fa-house"></i> {{ data.empresa.nome }} </a></li>
+				<li><a href="/palavras"><i class="fa-solid fa-pencil"></i> {{ data.palavras.item }} </a></li> 
 			</header>
 		</div>
 	</header>   
