--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2883,6 +2883,7 @@ input[type="button"],
 			line-height: 1em;
 			margin-left: 0.75em;
 			padding-left: 0.75em;
+			margin-bottom: 1em; 
 		}
 
 				#header .nav li:first-child {
